--- a/gallery.html
+++ b/gallery.html
@@ -65,6 +65,11 @@
             <div class="gallery-grid">
                 <!-- Gallery items will be dynamically loaded by js/gallery.js -->
             </div>
+
+            <!-- Load More Button -->
+            <div class="load-more-container">
+                <button id="loadMoreBtn" class="load-more-btn">Load More</button>
+            </div>
         </div>
     </section>
 
