--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-brand">
-            <a href="index.html">jin40_photography</a>
+            <a href="index">jin40_photography</a>
         </div>
         <button class="nav-toggle" aria-label="Open menu">
             <span></span>
@@ -34,9 +34,9 @@
             <span></span>
         </button>
         <ul class="nav-menu">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="index" class="active">Home</a></li>
+            <li><a href="gallery">Gallery</a></li>
+            <li><a href="blog">Blog</a></li>
         </ul>
     </nav>
 
@@ -47,7 +47,7 @@
             <p class="hero-description">
                 Capturing moments that matter<br>
             </p>
-            <a href="gallery.html" class="btn btn-primary">View My Work</a>
+            <a href="gallery" class="btn btn-primary">View My Work</a>
         </div>
         <div class="hero-image">
             <img src="images/hero/hero-photo.webp" alt="Featured photo"
@@ -87,7 +87,7 @@
                 <!-- Dynamically loaded by main.js -->
             </div>
             <div class="text-center">
-                <a href="gallery.html" class="btn btn-secondary">View More</a>
+                <a href="gallery" class="btn btn-secondary">View More</a>
             </div>
         </div>
     </section>
