--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-brand">
-            <a href="index.html">jin40_photography</a>
+            <a href="index">jin40_photography</a>
         </div>
         <button class="nav-toggle" aria-label="Open menu">
             <span></span>
@@ -20,9 +20,9 @@
             <span></span>
         </button>
         <ul class="nav-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="blog.html" class="active">Blog</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="gallery">Gallery</a></li>
+            <li><a href="blog" class="active">Blog</a></li>
         </ul>
     </nav>
 
