--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-brand">
-            <a href="index">jin40_photography</a>
+            <a href="home">jin40_photography</a>
         </div>
         <button class="nav-toggle" aria-label="Open menu">
             <span></span>
@@ -20,7 +20,7 @@
             <span></span>
         </button>
         <ul class="nav-menu">
-            <li><a href="index">Home</a></li>
+            <li><a href="home">Home</a></li>
             <li><a href="gallery" class="active">Gallery</a></li>
             <li><a href="blog">Blog</a></li>
         </ul>
